--- a/commande_choix.html
+++ b/commande_choix.html
@@ -24,7 +24,7 @@
   --bulma-scheme-h: 59;
   --bulma-scheme-s: 100%;
   --bulma-success-l: 0%;
-  --bulma-border: #ff4343;
+  --bulma-border: #ffbd43;
 }
   </style>
 </head>
@@ -89,6 +89,15 @@
       <div class="navbar-item">
         <div class="buttons">
           <button class="button is-info" id="connection_button">Connectez-vous!</button>
+          <button class="button is-outlined is-link is-static" id="user_static_button">
+            <span class="icon-text">
+              <span class="icon">
+                <i class="fas fa-user"></i>
+              </span>
+              <span class="has-text-link" id="user_button_username">username</span>
+            </span>
+          </button>
+          <button class="button is-outlined is-static has-text-link" id="points_static_button">Points: 0</button>
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
@@ -136,17 +145,17 @@
      <div class="field">
        <label class="label has-text-info">Nom d'utilisateur</label>
        <div class="control">
-         <input class="input" type="text" placeholder="Votre nom d'utilisateur" style="border: 1px solid #43ebff;">
+         <input class="input" id="username_input" type="text" placeholder="Votre nom d'utilisateur" style="border: 1px solid #43ebff;">
        </div>
      </div>
      <div class="field">
        <label class="label has-text-info">Mot de passe </label>
        <div class="control">
-         <input class="input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+         <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
        </div>
      </div>
      <div class="buttons">
-       <button class="button is-info" id="b_cont">Continuer</button>
+       <button class="button is-info" id="login_button">Continuer</button>
      </div>
      <div>
        <p class="has-text-success">Vous ne possedez pas une compte? alors: </p>
