--- a/enregistrement_final.html
+++ b/enregistrement_final.html
@@ -91,7 +91,6 @@
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
-          <a class="button is-light has-text-info" id="account_button">Mon compte</a>
         </div>
       </div>
     </div>
@@ -102,13 +101,10 @@
     <h1 class="subtitle is-size-4 has-text-success has-text-centered">Votre Compte chez Los Pollos Hermanos et maintenant crée et vous
         pouvez profiter de tous les avantages y comprises!!!
     </h1>
-    <p class="is-size-4 has-text-success has-text-centered">Vous pouvez maintenant continuer a votre space personnel ou retourner a la 
+    <p class="is-size-4 has-text-success has-text-centered">Vous pouvez maintenant retourner a la 
         page d'accueil.
     </p>
     <div class="field is-grouped is-grouped-centered">
-        <div class="control">
-            <a class="button is-link">Space personnel</a>
-        </div>
         <div class="control">
             <a href="Page_Principale.html" class="button is-link">Accueil</a>
         </div>
