--- a/enregistrement_type_account.html
+++ b/enregistrement_type_account.html
@@ -33,7 +33,7 @@
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
-      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale.html">
+      <a class="navbar-item pr-4 pl-4" href="Page_Principale.html">
         Nous
       </a>
 
