--- a/commande.html
+++ b/commande.html
@@ -89,6 +89,15 @@
       <div class="navbar-item">
         <div class="buttons">
           <button class="button is-info" id="connection_button">Connectez-vous!</button>
+          <button class="button is-outlined is-link is-static" id="user_static_button">
+            <span class="icon-text">
+              <span class="icon">
+                <i class="fas fa-user"></i>
+              </span>
+              <span class="has-text-link" id="user_button_username">username</span>
+            </span>
+          </button>
+          <button class="button is-outlined is-static has-text-link" id="points_static_button">Points: 0</button>
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
@@ -509,6 +518,36 @@
 </div>
     
 </div>
+<div class="modal" id="connection_modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+     <div class="box has-background-white" id="connection_form">
+       <h1 class="title is-size-3 has-text-link has-text-centered">Connection</h1>
+       <div class="field">
+         <label class="label has-text-info">Nom d'utilisateur</label>
+         <div class="control">
+           <input class="input" id="username_input" type="text" placeholder="Votre nom d'utilisateur" style="border: 1px solid #43ebff;">
+         </div>
+       </div>
+       <div class="field">
+         <label class="label has-text-info">Mot de passe </label>
+         <div class="control">
+           <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+         </div>
+       </div>
+       <div class="buttons">
+         <button class="button is-info" id="login_button">Continuer</button>
+       </div>
+       <div>
+         <p class="has-text-success">Vous ne possedez pas une compte? alors: </p>
+         <div class="buttons">
+         <a href="enregistrement_type_account.html"><button class="button is-info">Créez une compte</button></a>
+       </div>
+       </div>
+     </div>     
+    </div>
+    <button class="modal-close is-large" aria-label="close" id="modal_close_button1"></button>
+  </div>
 <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 <script src="scripts/commande.js"></script>
 <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
