--- a/contratacion.html
+++ b/contratacion.html
@@ -24,7 +24,7 @@
   --bulma-scheme-h: 59;
   --bulma-scheme-s: 100%;
   --bulma-success-l: 0%;
-  --bulma-border: #ff4343;
+  --bulma-border: #ffbd43;
 }
   </style>
 </head>
@@ -87,6 +87,16 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
+          <button class="button is-info" id="connection_button">Connectez-vous!</button>
+          <button class="button is-outlined is-link is-static" id="user_static_button">
+            <span class="icon-text">
+              <span class="icon">
+                <i class="fas fa-user"></i>
+              </span>
+              <span class="has-text-link" id="user_button_username">username</span>
+            </span>
+          </button>
+          <button class="button is-outlined is-static has-text-link" id="points_static_button">Points: 0</button>
           <a class="button is-primary is-selected" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
@@ -167,7 +177,9 @@ nous croyons en l'importance de la formation continue et du développement perso
 <div class="field">
   <label class="label has-text-success">Numero de telephone</label>
   <div class="control has-icons-left has-icons-right">
-    <input class="input is-dark" type="text" placeholder="0X XX XX XX XX" style="border: 2px solid rgb(255, 174, 0)">
+    <input class="input is-dark" type="tel" placeholder="0X XX XX XX XX"
+    pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}" 
+    style="border: 2px solid rgb(255, 174, 0)">
   </div>
 
 </div>
@@ -195,6 +207,22 @@ nous croyons en l'importance de la formation continue et du développement perso
   </div>
 </div>
 
+<div class="field ">
+  <div class="control">
+    <label class="label has-text-success">Inserez votre CV</label>
+    <div class="file is-boxed is-link">
+      <label class="file-label">
+        <input class="file-input" type="file" name="CV">
+        <span class="file-cta">
+          <span class="file-icon">
+            <i class="fas fa-file"></i>
+          </span>
+          <span class="file-label has-text-success">Votre CV</span>
+        </span>
+      </label>
+    </div>
+  </div>
+</div>
 
 <div class="field">
   <div class="control">
@@ -207,7 +235,7 @@ nous croyons en l'importance de la formation continue et du développement perso
 
 <div class="field is-grouped">
   <div class="control">
-    <button class="button is-link">Submit</button>
+    <button class="button is-link">Envoyer</button>
   </div>
 </div>
       </form>
@@ -639,6 +667,36 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
   </div>
   <br/>
   <p class="ml-6 mt-4 has-text-white has-text-centered is-size-5">Ce règlement vise à garantir un environnement de travail respectueux des lois et des valeurs éthiques de Los Pollos Hermanos.</p>
+</div>
+<div class="modal" id="connection_modal">
+  <div class="modal-background"></div>
+  <div class="modal-content">
+   <div class="box has-background-white" id="connection_form">
+     <h1 class="title is-size-3 has-text-link has-text-centered">Connection</h1>
+     <div class="field">
+       <label class="label has-text-info">Nom d'utilisateur</label>
+       <div class="control">
+         <input class="input" id="username_input" type="text" placeholder="Votre nom d'utilisateur" style="border: 1px solid #43ebff;">
+       </div>
+     </div>
+     <div class="field">
+       <label class="label has-text-info">Mot de passe </label>
+       <div class="control">
+         <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+       </div>
+     </div>
+     <div class="buttons">
+       <button class="button is-info" id="login_button">Continuer</button>
+     </div>
+     <div>
+       <p class="has-text-success">Vous ne possedez pas une compte? alors: </p>
+       <div class="buttons">
+       <a href="enregistrement_type_account.html"><button class="button is-info">Créez une compte</button></a>
+     </div>
+     </div>
+   </div>     
+  </div>
+  <button class="modal-close is-large" aria-label="close" id="modal_close_button1"></button>
 </div>
   <footer class="has-background-grey-darker" style="margin-top: 2rem; border-top: 2px solid;">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
