fixed the exercice buttons

--- a/enregistrement_final.html
+++ b/enregistrement_final.html
@@ -56,13 +56,13 @@
           <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
             Exercice 3
           </a>
-          <a href="Nazar-Exercice4-HTML" class="navbar-item">
+          <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
             Exercice 4
           </a>
-          <a href="Nazar-Exercice5-HTML" class="navbar-item">
+          <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
             Exercice 5
           </a>
-          <a class="navbar-item">
+          <a href="Angel-Exercice6-HTML.html" class="navbar-item">
             Exercice 6
           </a>
         </div>
