--- a/Page_Principale.html
+++ b/Page_Principale.html
@@ -8,29 +8,37 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
 >
+<link rel="stylesheet" href="styles/style_PP.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="styles/style_PP.css">
+  
   
   <title>Los Pollos Hermanos</title>
   <style>
     :root {
-  --bulma-info-h: 219deg;
-  --bulma-info-l: 55%;
-  --bulma-primary-h: 12deg;
-  --bulma-primary-l: 47%;
-  --bulma-link-h: 33deg;
-  --bulma-link-s: 90%;
-  --bulma-link-l: 59%;
-  --bulma-scheme-h: 59;
-  --bulma-scheme-s: 100%;
+      --bulma-primary-h: 7deg;
+  --bulma-primary-l: 49%;
+  --bulma-link-h: 45deg;
+  --bulma-link-l: 49%;
+  --bulma-info-h: 191deg;
+  --bulma-info-l: 49%;
+  --bulma-success-s: 100%;
   --bulma-success-l: 0%;
+  --bulma-warning-h: 37deg;
+  --bulma-warning-l: 49%;
+  --bulma-danger-h: 360deg;
+  --bulma-danger-l: 38%;
+  --bulma-scheme-h: 57;
+  --bulma-scheme-s: 100%;
+  --bulma-light-l: 100%;
+  --bulma-light-invert-l: 100%;
   --bulma-border: #ffdb3b;
+  --bulma-dark-l: 7%;
 }
   </style>
 </head>
-<body class="has-background-dark" id="ppbody">
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
-  <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
+<body  class="has-background-dark" id="ppbody">
+  <h1 id="title_pp" class="has-text-primary is-size-1 mayan"> Los Pollos Hermanos</h1>
+  <nav class="navbar has-background-dark mayan" role="navigation" aria-label="main navigation">
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
@@ -111,9 +119,10 @@
   </div>
 </nav>
 <div class="container mt-5">
+ 
   <div class="columns">
     <div class="column is-two-thirds">
-      <h1 class="is-size-2">Qui sommes nous?</h1>
+      <h1 class="is-size-2 mayan">Qui sommes nous?</h1>
       <p class="has-text-white">Bienvenue chez <em>Los Pollos Hermanos</em>, le restaurant o&ugrave; la qualit&eacute; rencontre la tradition.<br>
 Fond&eacute; par le charismatique Gustavo Fring, <em>Los Pollos Hermanos</em> vous offre une exp&eacute;rience<br> culinaire in&eacute;gal&eacute;e,
 mettant en avant des poulets r&ocirc;tis &agrave; la perfection,<br>
