--- a/commande_delivery_1.html
+++ b/commande_delivery_1.html
@@ -15,17 +15,24 @@
   <script data-class='loading' data-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsFWNlSO5ylGra_3noSGNIhFZGkXqbw54&libraries=places"></script>
   <style>
     :root {
-  --bulma-info-h: 219deg;
-  --bulma-info-l: 55%;
-  --bulma-primary-h: 12deg;
-  --bulma-primary-l: 47%;
-  --bulma-link-h: 33deg;
-  --bulma-link-s: 90%;
-  --bulma-link-l: 59%;
-  --bulma-scheme-h: 59;
-  --bulma-scheme-s: 100%;
+      --bulma-primary-h: 7deg;
+  --bulma-primary-l: 49%;
+  --bulma-link-h: 45deg;
+  --bulma-link-l: 49%;
+  --bulma-info-h: 191deg;
+  --bulma-info-l: 49%;
+  --bulma-success-s: 100%;
   --bulma-success-l: 0%;
-  --bulma-border: #ffbd43;
+  --bulma-warning-h: 37deg;
+  --bulma-warning-l: 49%;
+  --bulma-danger-h: 360deg;
+  --bulma-danger-l: 38%;
+  --bulma-scheme-h: 57;
+  --bulma-scheme-s: 100%;
+  --bulma-light-l: 100%;
+  --bulma-light-invert-l: 100%;
+  --bulma-border: #ffdb3b;
+  --bulma-dark-l: 7%;
 }
   </style>
 </head>
