--- a/contratacion.html
+++ b/contratacion.html
@@ -14,22 +14,29 @@
   <title>Los Pollos Hermanos</title>
   <style>
     :root {
-  --bulma-info-h: 219deg;
-  --bulma-info-l: 55%;
-  --bulma-primary-h: 12deg;
-  --bulma-primary-l: 47%;
-  --bulma-link-h: 33deg;
-  --bulma-link-s: 90%;
-  --bulma-link-l: 59%;
-  --bulma-scheme-h: 59;
-  --bulma-scheme-s: 100%;
+      --bulma-primary-h: 7deg;
+  --bulma-primary-l: 49%;
+  --bulma-link-h: 45deg;
+  --bulma-link-l: 49%;
+  --bulma-info-h: 191deg;
+  --bulma-info-l: 49%;
+  --bulma-success-s: 100%;
   --bulma-success-l: 0%;
-  --bulma-border: #ffbd43;
+  --bulma-warning-h: 37deg;
+  --bulma-warning-l: 49%;
+  --bulma-danger-h: 360deg;
+  --bulma-danger-l: 38%;
+  --bulma-scheme-h: 57;
+  --bulma-scheme-s: 100%;
+  --bulma-light-l: 100%;
+  --bulma-light-invert-l: 100%;
+  --bulma-border: red;
+  --bulma-dark-l: 7%;
 }
   </style>
 </head>
 <body class="has-navbar-fixed-bottom has-background-dark">
-  <h1 id="title_pp" class="has-text-primary is-size-1 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-1 mayan"> Los Pollos Hermanos</h1>
   <nav id="navbar" class="navbar is-fixed-bottom has-background-dark" role="navigation" aria-label="main navigation">
   <div id="navbar" class="navbar-menu box pt-3 pb-3 m-1 is-active">
     <div class="navbar-start">
@@ -110,11 +117,11 @@
 
 <div class="tabs is-centered is-toggle  mt-1">
   <ul>
-    <li><a class="has-text-success has-background-link has-text-weight-bold" onclick="openTab(event, 'generalites_tab')">Generalites</a></li>
-    <li><a class="has-text-success has-background-link has-text-weight-bold" onclick="openTab(event, 'presentation_tab')">Presentation</a></li>
-    <li><a class="has-text-success has-background-link has-text-weight-bold" onclick="openTab(event, 'competences_tab')">Competences</a></li>
-    <li><a class="has-text-success has-background-link has-text-weight-bold" onclick="openTab(event, 'benef_tab')">Benefices</a></li>
-    <li><a class="has-text-success has-background-link has-text-weight-bold" onclick="openTab(event, 'legal_tab')">Notions Legales</a></li>
+    <li><a class="has-text-primary-35 has-background-link has-text-weight-bold" onclick="openTab(event, 'generalites_tab')">Generalites</a></li>
+    <li><a class="has-text-primary-35 has-background-link has-text-weight-bold" onclick="openTab(event, 'presentation_tab')">Presentation</a></li>
+    <li><a class="has-text-primary-35 has-background-link has-text-weight-bold" onclick="openTab(event, 'competences_tab')">Competences</a></li>
+    <li><a class="has-text-primary-35 has-background-link has-text-weight-bold" onclick="openTab(event, 'benef_tab')">Benefices</a></li>
+    <li><a class="has-text-primary-35 has-background-link has-text-weight-bold" onclick="openTab(event, 'legal_tab')">Notions Legales</a></li>
   </ul>
 </div>
   
@@ -123,7 +130,7 @@
 <div class="container mt-5">
   <div class="columns">
     <div class="column is-half">
-      <h1 class="is-size-3">Rejoignez l'équipe de <em>Los Pollos Hermanos</em></h1>
+      <h1 class="is-size-3 mayan">Rejoignez l'équipe de <em>Los Pollos Hermanos</em></h1>
 <p class="has-text-white">Chez <em>Los Pollos Hermanos</em>, nous croyons que notre succès repose sur la passion<br>
    et l'engagement de nos employés. Si vous aimez offrir un service exceptionnel,<br>
    travailler dans un environnement dynamique, et surtout partager notre amour du<br>
@@ -133,7 +140,7 @@
 service client, cuisine, gestion et bien plus encore. Peu importe votre expérience,<br>
 nous croyons en l'importance de la formation continue et du développement personnel.</p>
     <br/>
-<h4 class="is-size-4">Pourquoi travailler chez <em>Los Pollos Hermanos</em> ?</h4>
+<h4 class="is-size-4 mayan">Pourquoi travailler chez <em>Los Pollos Hermanos</em> ?</h4>
 
 <ul  class="has-text-white">
   <li><strong class="has-text-white">Un environnement de travail convivial et dynamique</strong> : Faites partie d'une équipe passionnée où la bonne humeur est essentielle.</li>
@@ -141,7 +148,7 @@ nous croyons en l'importance de la formation continue et du développement perso
   <li><strong class="has-text-white">Des avantages compétitifs</strong> : Salaire attractif, horaires flexibles, et un accès à des avantages exclusifs.</li>
 </ul>
  <br/>
-<h4 class="is-size-4">Postes disponibles :</h4>
+<h4 class="is-size-4 mayan">Postes disponibles :</h4>
 <ul  class="has-text-white is-size-5">
   <li>• Cuisinier</li>
   <li>• Serveur/Serveuse</li>
@@ -164,11 +171,14 @@ nous croyons en l'importance de la formation continue et du développement perso
  </article>
     </div>
     <div class="column">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/B9RgougnhiE?si=OoVrRDF7PEERnRyO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/B9RgougnhiE?si=OoVrRDF7PEERnRyO" 
+      title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+      style="border: 2px solid red; border-radius: 5px; box-shadow: 0px 0px 5px white, 0px 0px 5px white inset;"></iframe>
       <br/>
-      <form class="box mt-6 has-background-white" style="border: 3px solid rgb(255, 174, 0)">
+      <form class="box mt-6 has-background-white" style="border: 3px solid rgb(255, 174, 0); box-shadow: 0px 0px 5px rgb(0, 140, 255), 0px 0px 5px rgb(0, 140, 255) inset;">
         <div class="field">
-  <label class="label has-text-success">Name</label>
+  <label class="label has-text-success">Nom</label>
   <div class="control">
     <input class="input is-dark" type="text" placeholder="Walter White" style="border: 2px solid rgb(255, 174, 0)">
   </div>
@@ -248,7 +258,7 @@ nous croyons en l'importance de la formation continue et du développement perso
     <div class="columns">
       <div class="column is-full">
         
-        <h1 class="is-size-3 has-text-centered">Les postes disponibles chez Los Pollos Hermanos!!!</h1>
+        <h1 class="is-size-2 has-text-centered mayan">Les postes disponibles chez Los Pollos Hermanos</h1>
         <p class="has-text-white mb-30 has-text-centered">Vous êtes donc interessé/e de former parte de notre famille?<br/>
         Regardez ci-dessous les postes de travaille disponibles et leurs descriptions, ce qui<br/>
         vous aidera à décider quel rôle est le meilleure pour vous, vous pouvez ainsi consulter<br/>
@@ -256,7 +266,7 @@ nous croyons en l'importance de la formation continue et du développement perso
         Bienvenue chez nous! où quelque chose de delicieux et toujours en cuisson.
         </p>
         <br/>
-        <div class="columns mt-10">
+        <div class="columns mt-10" style="border: 2px solid red; border-radius: 15px; box-shadow: 0px 0px 5px white, 0px 0px 5px white inset;">
         <div class="column is-half">
         <h1 class="title is-size-3 has-text-centered has-text-danger">Front-end</h1>
         <h1 class="subtitle is-size-5 has-text-centered has-text-white">Ceux en contact avec nos clients</h1>
@@ -578,19 +588,19 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
  </ol>
       <br/>
     </div>
-    <div class="column">
+    <div class="column has-text-success">
       <h1 class="subtitle has-text-link has-text-centered is-size-4">Benefices specifiques</h1>
       <ol class="ml-6 is-size-5">
-        <li><p class="has-text-success is-size-5"><strong>Chef Cuisinier</strong>: 
+        <li><p class="has-text-success is-size-5"><strong class="has-text-success">Chef Cuisinier</strong>: 
           <br/>Prime de responsabilité, formation continue en cuisine et management, accès à des événements gastronomiques.</p></li>
         <br/>
-        <li><p class="has-text-success is-size-5"><strong>Serveur</strong>: 
+        <li><p class="has-text-success is-size-5"><strong class="has-text-success">Serveur</strong>: 
           <br/>Possibilité de choisir des horaires flexibles, bonus pour service client exceptionnel.</p></li>
         <br/>
-        <li><p class="has-text-success is-size-5"><strong>Responsable de site</strong>: 
+        <li><p class="has-text-success is-size-5"><strong class="has-text-success">Responsable de site</strong>: 
           <br/>Véhicule de fonction ou indemnités de déplacement, primes de performance sur la gestion du restaurant, formations en gestion d'entreprise.</p></li>
         <br/>
-        <li><p class="has-text-success is-size-5"><strong>Équipe de Gestion</strong>: 
+        <li><p class="has-text-success is-size-5"><strong class="has-text-success">Équipe de Gestion</strong>: 
           <br/>Participation aux bénéfices de l’entreprise, opportunités de formation avancée en leadership et gestion, télétravail partiel selon les besoins.</p></li>
       </ol>
     </div>
