--- a/investment_space.html
+++ b/investment_space.html
@@ -40,42 +40,25 @@
   <style>
 
 
-    :root {
-
-
-  --bulma-info-h: 219deg;
-
-
-  --bulma-info-l: 55%;
-
-
-  --bulma-primary-h: 12deg;
-
-
-  --bulma-primary-l: 47%;
-
-
-  --bulma-link-h: 33deg;
-
-
-  --bulma-link-s: 90%;
-
-
-  --bulma-link-l: 59%;
-
-
-  --bulma-scheme-h: 59;
-
-
-  --bulma-scheme-s: 100%;
-
-
+:root {
+      --bulma-primary-h: 7deg;
+  --bulma-primary-l: 49%;
+  --bulma-link-h: 45deg;
+  --bulma-link-l: 49%;
+  --bulma-info-h: 191deg;
+  --bulma-info-l: 49%;
+  --bulma-success-s: 100%;
   --bulma-success-l: 0%;
-
-
-  --bulma-border: #ff4343;
-
-
+  --bulma-warning-h: 37deg;
+  --bulma-warning-l: 49%;
+  --bulma-danger-h: 360deg;
+  --bulma-danger-l: 38%;
+  --bulma-scheme-h: 57;
+  --bulma-scheme-s: 100%;
+  --bulma-light-l: 100%;
+  --bulma-light-invert-l: 100%;
+  --bulma-border: #ffdb3b;
+  --bulma-dark-l: 7%;
 }
 
 
@@ -85,10 +68,10 @@
 </head>
 
 
-<body class="has-background-dark" id="ppbody">
+<body class="has-background-dark">
 
 
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-2 elegant"> Los Pollos Hermanos</h1>
 
 
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
@@ -290,7 +273,7 @@
 </nav>
 
 
-<div class="container mt-5">
+<div class="container mt-5 p-0">
 
 
   <div class="columns">
@@ -299,24 +282,15 @@
     <div class="column is-two-thirds">
 
 
-      <h1 class="is-size-2">Investir dans notre companie</h1>
+      <h1 class="is-size-2 elegant">Investir dans notre companie</h1>
 
 
-      <p class="has-text-white">Investir dans Los Pollos Hermanos, c’est faire le choix d’une entreprise en pleine expansion,
+      <p class="has-text-white">Investir dans Los Pollos Hermanos, c'est faire le choix d'une entreprise en pleine expansion,
 
-
-         avec un fort potentiel de croissance. Grâce à notre engagement envers la qualité et l’innovation, nous avons su conquérir
-
-
-         un marché en constante évolution. Votre investissement nous permettra d’accélérer notre développement, d’optimiser nos
-
-
-         infrastructures et d’étendre notre présence sur de nouveaux territoires. En rejoignant notre aventure, vous contribuez à
-
-
-         la réussite d’une firme ambitieuse, prête à saisir les opportunités du marché et à générer des rendements attractifs. Ne
-
-
+         avec un fort potentiel de croissance. Grâce à notre engagement envers la qualité et l'innovation, nous avons su conquérir
+         un marché en constante évolution. Votre investissement nous permettra d'accélérer notre développement, d'optimiser nos
+         infrastructures et d'étendre notre présence sur de nouveaux territoires. En rejoignant notre aventure, vous contribuez à
+         la réussite d'une firme ambitieuse, prête à saisir les opportunités du marché et à générer des rendements attractifs. Ne
          manquez pas cette occasion unique de participer à notre succès !</p>
 
 
@@ -329,13 +303,13 @@
       <div class="box has-background-white">
 
 
-      <h3 class="is-size-4 title has-text-link">Voulez-vous investir?</h3>
+      <h3 class="is-size-3 title has-text-link elegant">Voulez-vous investir?</h3>
 
 
-      <a href="investment_credentials.html" class="mb-6">Oui! Je souhaite investir!</a><br>
+      <a href="investment_credentials.html" class="button is-primary mb-3">Oui! Je souhaite investir!</a><br>
 
 
-      <a href="Page_Principale.html" class="mb-6">Non! Je souhaite retourner à la page d'acceuil</a>
+      <a href="Page_Principale.html" class="button is-link has-text-white ">Non! Je souhaite retourner à la page d'acceuil</a>
 
 
       </div>
@@ -437,7 +411,7 @@
   </div>
 
 
-  <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
+  <footer class="has-background-grey-darker " style="margin-top: 2rem; border-top: 2px solid; width: 100%;">
 
 
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
@@ -445,6 +419,7 @@
 
   </footer>
 
+</div>
 
   <script src="scripts/PP.js"></script>
 
